--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-/bootstrap/compiled.php
-/vendor
-composer.phar
-composer.lock
-.env.*.php
-.env.php
-.DS_Store
-Thumbs.db
+vendor/
+app/storage/
+app/comands
+app/config/local/
+app/config/packages/
+app/config/testing/
+app/config/database.php
